kubernetes/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golem
  labels:
    app: golem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golem
  template:
    metadata:
      name: golem
      labels:
        app: golem
    spec:
      serviceAccountName: golem-sa
      containers:
        - name: golem
          image: ghcr.io/zgamelogic/golem:production
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
