kubernetes/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golem
spec:
  selector:
    app: golem
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
